--- a/hello.html
+++ b/hello.html
@@ -1,6 +1,14 @@
 <html>
-  <body>
-    <h1>Hello Extensions</h1>
+  <head>
+    <link rel = "stylesheet" href = "styles.css" >
+  </head>
+  <body  class = "box">
+    <h1>A metronome is a device that produces a steady beat.</h1>
+    <p class = "bpm">BPM<br/>
+    <input id="tempoSlider" type="range" min="50" max="200" value="100">
+    <br/>
+    </p>
+    <button id="startButton">start</button>
     <script src="popup.js"></script>
   </body>
 </html>
