--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,8 @@
   </head>
   <body  class = "box">
     <h1>A metronome is a device that produces a steady beat.</h1>
-    <p class = "bpm">BPM<br/>
+    <p class = "bpm"> BPM <span id="bpmDispay"></span>
+      <br/>
     <input id="tempoSlider" type="range" min="50" max="200" value="100">
     <br/>
     </p>
